[gd_scene load_steps=3 format=3 uid="uid://cpifl7ols5dmr"]

[ext_resource type="Script" path="res://scripts/uis/SoundTrackMenu.gd" id="1_juaq8"]
[ext_resource type="Theme" uid="uid://becgxgj56yfdh" path="res://assets/style/default_theme.tres" id="2_eniyt"]

[node name="SoundTrackMenu" type="CanvasLayer"]
script = ExtResource("1_juaq8")

[node name="MusicList" type="ItemList" parent="."]
custom_minimum_size = Vector2(640, 0)
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme = ExtResource("2_eniyt")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(128, 32)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -267.0
offset_top = -123.0
offset_right = -28.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_eniyt")
text = "button.quit"

[connection signal="item_selected" from="MusicList" to="." method="_on_music_list_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
